# salsa-spa

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
artículo/: SALSA-articulo (1).md
src/salsa_spa/: __init__.py  cli.py  file_io.py  grader_prob.py  text_cleaning.py  vocab_lists.py  word_level.py
src/salsa_spa/vocab/: all_vocab_levels.csv
tests/: test_basic.py  test_cefr_datasets.py  test_cli.py  test_file_io.py  test_grader_prob.py  test_text_cleaning.py  test_vocab_lists.py  test_word_level.py
