[project]
name = "salsa-spa"
version = "0.1.0"
description = "SALSA: Spanish Automatic Language Skill Analyzer. A Python library for Spanish text analysis and automatic CEFR grading."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.16.0",
]
authors = [
    { name = "Jesus Vazquez-Capel", email = "jesus.vazquezcapel@estudiante.uam.es" },
    { name = "Aldan Creo", email = "os@acmc.fyi" },
    { name = "Damaris Mayans", email = "dmayans@colby.edu" }
]

[project.scripts]
salsa_spa = "salsa_spa.cli:app"

[dependency-groups]
dev = [
    "datasets>=4.0.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }
